--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
         <nav class="footer__seguinos">
             <h3>Seguinos</h3>
             <div class="seguinos__redes">
-                <a href="https://www.instagram.com/ambar_nailssss?igsh=MWp0NWxiYzh6bXNxcA=="><img class="icono-instagram"
-                        src="./imagenes/instagram-icon.png.png" alt=""></a>
+                <a href="https://www.instagram.com/ambar_nailssss?igsh=MWp0NWxiYzh6bXNxcA=="><img
+                        class="icono-instagram" src="./imagenes/instagram-icon.png.png" alt=""></a>
                 <a href="https://www.tiktok.com/@ambarnailss?_t=ZM-8w8ZGaO1qqb&_r=1"><img class="icono-tiktok"
                         src="./imagenes/tiktok-icon.png.png" alt=""></a>
                 <a href=""><img class="icono.faceboock" src="./imagenes/facebook-icon.png.png" alt=""></a>
