--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <!-- Item 1 -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button bg-white text-dark fw-bold" type="button"
+                        <button class="accordion-button fw-bold" type="button"
                             data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
                             aria-controls="collapseOne">
                             1. ¿Qué son las press-on nails?
@@ -132,7 +132,7 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
-                        <div class="accordion-body bg-white text-dark">
+                        <div class="accordion-body ">
                             <strong>Las Press-On nails</strong> son uñas postizas reutilizables que se adhieren con
                             pegamento o cintas especiales. Son una opción rápida, práctica y sin compromiso para lucir
                             uñas perfectas sin ir al salón.
@@ -143,7 +143,7 @@
                 <!-- Item 2 -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed bg-white text-dark fw-bold" type="button"
+                        <button class="accordion-button collapsed  fw-bold" type="button"
                             data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
                             aria-controls="collapseTwo">
                             2. ¿Cuánto duran las press-on nails puestas?
@@ -151,7 +151,7 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
-                        <div class="accordion-body bg-white text-dark">
+                        <div class="accordion-body ">
                             <strong>En cuanto a la durabilidad</strong>, las Press-on con el cuidado adecuado, pueden
                             durar entre 5 a 10 días si usás adhesivo líquido, y de 1 a 3 días si usás cintas adhesivas.
                             ¡Además, podés volver a usarlas!
@@ -162,7 +162,7 @@
                 <!-- Item 3 -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed bg-white text-dark fw-bold" type="button"
+                        <button class="accordion-button collapsed fw-bold" type="button"
                             data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
                             aria-controls="collapseThree">
                             3. ¿Cómo sé qué medida de uña elegir?
@@ -170,7 +170,7 @@
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                         data-bs-parent="#accordionExample">
-                        <div class="accordion-body bg-white text-dark">
+                        <div class="accordion-body ">
                             <strong>Una vez realizada tu compra</strong>, te enviamos una guía de talles para que midas
                             tus uñas fácilmente. También ofrecemos kits de prueba para que encuentres tu medida exacta
                             antes de hacer tu pedido.
@@ -181,7 +181,7 @@
                 <!-- Item 4 -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingFour">
-                        <button class="accordion-button collapsed bg-white text-dark fw-bold" type="button"
+                        <button class="accordion-button collapsed fw-bold" type="button"
                             data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
                             aria-controls="collapseFour">
                             4. ¿Qué servicios ofrecen además de press-on?
@@ -189,7 +189,7 @@
                     </h2>
                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                         data-bs-parent="#accordionExample">
-                        <div class="accordion-body bg-white text-dark">
+                        <div class="accordion-body">
                             <strong>Además, en nuestro estudio también realizamos</strong> servicios de esmaltado
                             semipermanente, construcciones en gel, Kapping-nivelación con cita previa. ¡Contactanos para
                             agendar!
