--- a/index2.html
+++ b/index2.html
@@ -54,10 +54,10 @@
                 </div>
 
                 <!-- Botones -->
-                <div class="mt-4 d-grid gap-2">
-                    <a href="checkout.html" class="btn btn-success btn-lg">Finalizar Compra</a>
-                    <a href="#" class="btn btn-outline-danger btn-lg">Vaciar Carrito</a>
-                    <a href="index3.html" class="btn btn-outline-secondary btn-lg">← Seguir comprando</a>
+                <div class="mt-4 d-grid gap-2 botones-carrito">
+                    <a href="checkout.html" class="btn btn-success btn-lg botones">Finalizar Compra</a>
+                    <a href="#" class="btn btn-outline-danger btn-lg botones">Vaciar Carrito</a>
+                    <a href="index3.html" class="btn btn-outline-secondary btn-lg botones">← Seguir comprando</a>
                 </div>
             </div>
         </div>
