--- a/index3.html
+++ b/index3.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light border-bottom " style="background-color: 		#ff69b4 !important;">
+        <nav class="navbar navbar-expand-lg bg-light border-bottom " style="background-color: 	#f48fb1	!important;">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand" href="index.html">
@@ -244,7 +244,7 @@
         <nav class="footer__navegacion">
             <h3>Navegacion</h3>
             <div class="row">
-                <div class="col-sm-2 col-md-2 col-lg-3"><a href="/index2.html">Uñitas</a></div>
+                <div class="col-sm-2 col-md-2 col-lg-3"><a href="/index.html">Inicio</a></div>
                 <div class="col-sm-4 col-md-3 col-lg-3"><a href="index4.html">SALE!</a></div>
                 <div class="col-sm-2 col-md-2 col-lg-3"><a href="">Política Devolución</a></div>
             </div>
@@ -259,30 +259,30 @@
             <h3>Seguinos</h3>
             <div class="seguinos__redes">
                 <a href="https://www.instagram.com/ambar_nailssss"><img src="./imagenes/instagram-icon.png.png"
-                        alt="Instagram" /></a>
+                        alt="Icono Instagram" /></a>
                 <a href="https://www.tiktok.com/@ambarnailss"><img src="./imagenes/tiktok-icon.png.png"
-                        alt="TikTok" /></a>
-                <a href=""><img src="./imagenes/facebook-icon.png.png" alt="Facebook" /></a>
-                <a href=""><img src="./imagenes/mail-icon.png.png" alt="Mail" /></a>
+                        alt="Icono TikTok" /></a>
+                <a href="https://www.facebook.com/"><img src="./imagenes/facebook-icon.png.png" alt="Icono Facebook" /></a>
+                <a href="https://mail.google.com/mail?hl=es"><img src="./imagenes/mail-icon.png.png" alt="Icono Mail" /></a>
             </div>
         </nav>
 
         <div class="footer__envios">
             <h3>Formas de envío</h3>
             <div class="envios__logos">
-                <img src="./imagenes/correo-argentico.png" alt="Correo Argentino" />
-                <img src="./imagenes/correo-oca-logo.png" alt="OCA" />
+                <img src="./imagenes/correo-argentico.png" alt="Icono Correo Argentino" />
+                <img src="./imagenes/correo-oca-logo.png" alt="Icono Correo OCA" />
             </div>
         </div>
 
         <div class="container__mediosdepago">
             <h3>Medios de pago</h3>
             <div class="mediospago__logos">
-                <img src="./imagenes/mastercard-credito.png" alt="Mastercard Crédito" />
-                <img src="./imagenes/mastercard-debito.png" alt="Mastercard Débito" />
-                <img src="./imagenes/visa-credito.png" alt="Visa Crédito" />
-                <img src="./imagenes/visa-devito.png" alt="Visa Débito" />
-                <img src="./imagenes/mercadopago.png" alt="MercadoPago" />
+                <img src="./imagenes/mastercard-credito.png" alt="Icono Mastercard Crédito" />
+                <img src="./imagenes/mastercard-debito.png" alt="Icono Mastercard Débito" />
+                <img src="./imagenes/visa-credito.png" alt="Icono Visa Crédito" />
+                <img src="./imagenes/visa-devito.png" alt="Icono Visa Débito" />
+                <img src="./imagenes/mercadopago.png" alt="Icono MercadoPago" />
             </div>
         </div>
     </footer>
