--- a/index4.html
+++ b/index4.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light border-bottom " style="background-color: 		#ff69b4 !important;">
+        <nav class="navbar navbar-expand-lg bg-light border-bottom " style="background-color: 	#f48fb1 !important;">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand" href="index.html">
@@ -77,7 +77,7 @@
             <div class="galeria">
                 <div class="producto">
                     <img src="./imagenes/set-rojopasion.jpg" alt="Rojo Pasion">
-                    <p>Rojo Pasion/p>
+                    <p>Rojo Pasion</p>
                     <p class="precio-oferta">$899 ARS</p>
                 </div>
                 <div class="producto">
@@ -119,19 +119,19 @@
             <h3>Seguinos</h3>
             <div class="seguinos__redes">
                 <a href="https://www.instagram.com/ambar_nailssss?igsh=MWp0NWxiYzh6bXNxcA=="><img
-                        src="./imagenes/instagram-icon.png.png" alt=""></a>
+                        src="./imagenes/instagram-icon.png.png" alt="Icono instagram"></a>
                 <a href="https://www.tiktok.com/@ambarnailss?_t=ZM-8w8ZGaO1qqb&_r=1"><img
-                        src="./imagenes/tiktok-icon.png.png" alt=""></a>
-                <a href=""><img src="./imagenes/facebook-icon.png.png" alt=""></a>
-                <a href=""><img src="./imagenes/mail-icon.png.png" alt=""></a>
+                        src="./imagenes/tiktok-icon.png.png" alt="Icono tiktok"></a>
+                <a href="https://www.facebook.com/"><img src="./imagenes/facebook-icon.png.png" alt="Icono faceboock"></a>
+                <a href="https://mail.google.com/mail?hl=es"><img src="./imagenes/mail-icon.png.png" alt="Icono email"></a>
             </div>
         </nav>
 
         <div class="footer__envios">
             <h3>Formas de envio</h3>
             <div class="envios__logos">
-                <img src="./imagenes/correo-argentico.png" alt="">
-                <img src="./imagenes/correo-oca-logo.png" alt="">
+                <img src="./imagenes/correo-argentico.png" alt="Icono Correo Argentino">
+                <img src="./imagenes/correo-oca-logo.png" alt="Icono correo OCA">
             </div>
 
         </div>
@@ -139,11 +139,11 @@
         <div class="container__mediosdepago">
             <h3>Medios de pago</h3>
             <div class="mediospago__logos">
-                <img src="./imagenes/mastercard-credito.png" alt="">
-                <img src="./imagenes/mastercard-debito.png" alt="">
-                <img src="./imagenes/visa-credito.png" alt="">
-                <img src="./imagenes/visa-devito.png" alt="">
-                <img src="./imagenes/mercadopago.png" alt="">
+                <img src="./imagenes/mastercard-credito.png" alt="Icono Mastercard credio">
+                <img src="./imagenes/mastercard-debito.png" alt="Icono Mastercard debito">
+                <img src="./imagenes/visa-credito.png" alt="Icono Visa credito">
+                <img src="./imagenes/visa-devito.png" alt="Icono Visa debito">
+                <img src="./imagenes/mercadopago.png" alt="Icono Mercado Pago">
             </div>
         </div>
     </footer>
