--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Ambar Nails: press on personalizadas y servicios de uñas en Buenos Aires. Diseños únicos hechos a mano para destacar tu estilo.">
+    <meta name="keywords"
+        content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
+    <!--Lei en fuentes que no se conciera algo necesario el keywords ya que la mayoría de los buscadores dejaron de usarla como factor de posicionamiento hace años, porque era fácil de abusar.-->
     <link rel="stylesheet" href="./css/style.css">
     <!-- bootstrap-->
 
@@ -15,14 +20,14 @@
 
 
     <!-- icono de pagina -->
-    <link rel="icon" href="imagenes/A.N.png" type="image/png">
-    <title>AmbarNails</title>
+    <link rel="icon" href="imagenes/A.N.png" type="image/png" >
+    <title>Ambar Nails | Press-on personalizadas y Manicura </title>
 
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light border-bottom " style="background-color: 		#ff69b4 !important;">
+        <nav class="navbar navbar-expand-lg bg-light border-bottom " style="background-color: #f48fb1 !important;">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand" href="index.html">
@@ -55,7 +60,7 @@
 
                 </div>
                 <!-- Carrito -->
-                <a href="index2.html"><img src="./imagenes/carro-vacio.png" alt="carrito" style="height: 30px"></a>
+                <a href="index2.html"><img src="./imagenes/carro-vacio.png" alt="carrito-compras" style="height: 30px"></a>
             </div>
 
         </nav>
@@ -63,6 +68,13 @@
 
 
     <main>
+      <div class="container-h1">  
+    <div class="linea1-h1"></div>
+
+        <h1 class="class-h1">Ámbar Nails, donde tu brillo se vuelve arte.</h1>
+
+        <div class="linea2-h1"></div>
+</div>
         <div class="container1">
 
             <div class="container1__sobrenosotros">
@@ -81,22 +93,22 @@
                 </p>
             </div>
 
-            <div id="carouselExampleCaptions" class="carousel slide container1__carrousel" data-bs-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide container1__carrousel" data-bs-ride="carousel " >
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./imagenes/slide1.png.jpg" class="d-block w-100" alt="Primera imagen">
+                        <img src="./imagenes/slide1.png.jpg" class="d-block w-100" alt="Primeras uñas">
                         <div class="carousel-caption d-none d-md-block">
 
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./imagenes/slide3.png.jpg" class="d-block w-100" alt="Segunda imagen">
+                        <img src="./imagenes/slide3.png.jpg" class="d-block w-100" alt="Segundas Uñas">
                         <div class="carousel-caption d-none d-md-block">
 
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./imagenes/slide2.png.jpg" class="d-block w-100" alt="Tercera imagen">
+                        <img src="./imagenes/slide2.png.jpg" class="d-block w-100" alt="Terceras Uñas">
                         <div class="carousel-caption d-none d-md-block">
 
                         </div>
@@ -124,9 +136,8 @@
                 <!-- Item 1 -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button fw-bold" type="button"
-                            data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
-                            aria-controls="collapseOne">
+                        <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             1. ¿Qué son las press-on nails?
                         </button>
                     </h2>
@@ -143,9 +154,8 @@
                 <!-- Item 2 -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed  fw-bold" type="button"
-                            data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
-                            aria-controls="collapseTwo">
+                        <button class="accordion-button collapsed  fw-bold" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             2. ¿Cuánto duran las press-on nails puestas?
                         </button>
                     </h2>
@@ -162,9 +172,8 @@
                 <!-- Item 3 -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed fw-bold" type="button"
-                            data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
-                            aria-controls="collapseThree">
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             3. ¿Cómo sé qué medida de uña elegir?
                         </button>
                     </h2>
@@ -181,9 +190,8 @@
                 <!-- Item 4 -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingFour">
-                        <button class="accordion-button collapsed fw-bold" type="button"
-                            data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
-                            aria-controls="collapseFour">
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                             4. ¿Qué servicios ofrecen además de press-on?
                         </button>
                     </h2>
@@ -255,19 +263,19 @@
             <h3>Seguinos</h3>
             <div class="seguinos__redes">
                 <a href="https://www.instagram.com/ambar_nailssss?igsh=MWp0NWxiYzh6bXNxcA=="><img
-                        class="icono-instagram" src="./imagenes/instagram-icon.png.png" alt=""></a>
+                        class="icono-instagram" src="./imagenes/instagram-icon.png.png" alt=" Icono instagram"></a>
                 <a href="https://www.tiktok.com/@ambarnailss?_t=ZM-8w8ZGaO1qqb&_r=1"><img class="icono-tiktok"
-                        src="./imagenes/tiktok-icon.png.png" alt=""></a>
-                <a href=""><img class="icono.faceboock" src="./imagenes/facebook-icon.png.png" alt=""></a>
-                <a href=""><img class="icono.mail" src="./imagenes/mail-icon.png.png" alt=""></a>
+                        src="./imagenes/tiktok-icon.png.png" alt="icono tiktok"></a>
+                <a href="https://www.facebook.com/"><img class="icono.faceboock" src="./imagenes/facebook-icon.png.png" alt=" Icono faceboock"></a>
+                <a href="https://mail.google.com/mail?hl=es"><img class="icono.mail" src="./imagenes/mail-icon.png.png" alt="Icono email"></a>
             </div>
         </nav>
 
         <div class="footer__envios">
             <h3>Formas de envio</h3>
             <div class="envios__logos">
-                <img src="./imagenes/correo-argentico.png" alt="">
-                <img src="./imagenes/correo-oca-logo.png" alt="">
+                <img src="./imagenes/correo-argentico.png" alt="Icono Correo Argentino">
+                <img src="./imagenes/correo-oca-logo.png" alt="Icono correo OCA">
             </div>
 
         </div>
@@ -275,12 +283,14 @@
         <div class="container__mediosdepago">
             <h3>Medios de pago</h3>
             <div class="mediospago__logos">
-                <img src="./imagenes/mastercard-credito.png" alt="">
-                <img src="./imagenes/mastercard-debito.png" alt="">
-                <img src="./imagenes/visa-credito.png" alt="">
-                <img src="./imagenes/visa-devito.png" alt="">
-                <img src="./imagenes/mercadopago.png" alt="">
+                <img src="./imagenes/mastercard-credito.png" alt="Icono Mastercard credito">
+                <img src="./imagenes/mastercard-debito.png" alt="Icono Mastercard debito">
+                <img src="./imagenes/visa-credito.png" alt="Icono Visa credito">
+                <img src="./imagenes/visa-devito.png" alt="Icono Visa debito">
+                <img src="./imagenes/mercadopago.png" alt="Icono Mercado pago">
             </div>
         </div>
     </footer>
 </body>
+
+</html>
