--- a/producto1.html
+++ b/producto1.html
@@ -17,7 +17,7 @@
 
 <body class="body__producto1">
     <header>
-        <nav class="navbar navbar-expand-lg bg-light border-bottom " style="background-color: 		#ff69b4 !important;">
+        <nav class="navbar navbar-expand-lg bg-light border-bottom " style="background-color: #f48fb1!important;">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand" href="index.html">
@@ -121,23 +121,24 @@
 
         </div>
 
+     
         <nav class="footer__seguinos">
             <h3>Seguinos</h3>
             <div class="seguinos__redes">
                 <a href="https://www.instagram.com/ambar_nailssss?igsh=MWp0NWxiYzh6bXNxcA=="><img
-                        src="./imagenes/instagram-icon.png.png" alt=""></a>
+                        src="./imagenes/instagram-icon.png.png" alt="Icono instagram"></a>
                 <a href="https://www.tiktok.com/@ambarnailss?_t=ZM-8w8ZGaO1qqb&_r=1"><img
-                        src="./imagenes/tiktok-icon.png.png" alt=""></a>
-                <a href=""><img src="./imagenes/facebook-icon.png.png" alt=""></a>
-                <a href=""><img src="./imagenes/mail-icon.png.png" alt=""></a>
+                        src="./imagenes/tiktok-icon.png.png" alt="Icono tiktok"></a>
+                <a href="https://www.facebook.com/"><img src="./imagenes/facebook-icon.png.png" alt="Icono faceboock"></a>
+                <a href="https://mail.google.com/mail?hl=es"><img src="./imagenes/mail-icon.png.png" alt="Icono email"></a>
             </div>
         </nav>
 
         <div class="footer__envios">
             <h3>Formas de envio</h3>
             <div class="envios__logos">
-                <img src="./imagenes/correo-argentico.png" alt="">
-                <img src="./imagenes/correo-oca-logo.png" alt="">
+                <img src="./imagenes/correo-argentico.png" alt="Icono Correo Argentino">
+                <img src="./imagenes/correo-oca-logo.png" alt="Icono correo OCA">
             </div>
 
         </div>
@@ -145,11 +146,11 @@
         <div class="container__mediosdepago">
             <h3>Medios de pago</h3>
             <div class="mediospago__logos">
-                <img src="./imagenes/mastercard-credito.png" alt="">
-                <img src="./imagenes/mastercard-debito.png" alt="">
-                <img src="./imagenes/visa-credito.png" alt="">
-                <img src="./imagenes/visa-devito.png" alt="">
-                <img src="./imagenes/mercadopago.png" alt="">
+                <img src="./imagenes/mastercard-credito.png" alt="Icono Mastercard credio">
+                <img src="./imagenes/mastercard-debito.png" alt="Icono Mastercard debito">
+                <img src="./imagenes/visa-credito.png" alt="Icono Visa credito">
+                <img src="./imagenes/visa-devito.png" alt="Icono Visa debito">
+                <img src="./imagenes/mercadopago.png" alt="Icono Mercado Pago">
             </div>
         </div>
     </footer>
