Primer commit: subir proyecto AmbarNails

--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Ambar Nails: press on personalizadas y servicios de uñas en Buenos Aires. Diseños únicos hechos a mano para destacar tu estilo.">
-    <meta name="keywords"
-        content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
+    <meta name="description" content="Ambar Nails: press on personalizadas y servicios de uñas en Buenos Aires. Diseños únicos hechos a mano para destacar tu estilo.">
+    <meta name="keywords" content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
     <!--Lei en fuentes que no se conciera algo necesario el keywords ya que la mayoría de los buscadores dejaron de usarla como factor de posicionamiento hace años, porque era fácil de abusar.-->
     <link rel="stylesheet" href="./css/style.css">
     <!-- bootstrap-->
@@ -20,7 +18,7 @@
 
 
     <!-- icono de pagina -->
-    <link rel="icon" href="imagenes/A.N.png" type="image/png" >
+    <link rel="icon" href="imagenes/A.N.png" type="image/png">
     <title>Ambar Nails | Press-on personalizadas y Manicura </title>
 
 </head>
@@ -60,7 +58,8 @@
 
                 </div>
                 <!-- Carrito -->
-                <a href="index2.html"><img src="./imagenes/carro-vacio.png" alt="carrito-compras" style="height: 30px"></a>
+                <a href="index2.html"><img src="./imagenes/carro-vacio.png" alt="carrito-compras"
+                        style="height: 30px"></a>
             </div>
 
         </nav>
@@ -68,13 +67,13 @@
 
 
     <main>
-      <div class="container-h1">  
-    <div class="linea1-h1"></div>
+        <div class="container-h1">
+            <div class="linea1-h1"></div>
 
-        <h1 class="class-h1">Ámbar Nails, donde tu brillo se vuelve arte.</h1>
+            <h1 class="class-h1">Ámbar Nails, donde tu brillo se vuelve arte.</h1>
 
-        <div class="linea2-h1"></div>
-</div>
+            <div class="linea2-h1"></div>
+        </div>
         <div class="container1">
 
             <div class="container1__sobrenosotros">
@@ -93,7 +92,7 @@
                 </p>
             </div>
 
-            <div id="carouselExampleCaptions" class="carousel slide container1__carrousel" data-bs-ride="carousel " >
+            <div id="carouselExampleCaptions" class="carousel slide container1__carrousel" data-bs-ride="carousel ">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./imagenes/slide1.png.jpg" class="d-block w-100" alt="Primeras uñas">
@@ -266,8 +265,10 @@
                         class="icono-instagram" src="./imagenes/instagram-icon.png.png" alt=" Icono instagram"></a>
                 <a href="https://www.tiktok.com/@ambarnailss?_t=ZM-8w8ZGaO1qqb&_r=1"><img class="icono-tiktok"
                         src="./imagenes/tiktok-icon.png.png" alt="icono tiktok"></a>
-                <a href="https://www.facebook.com/"><img class="icono.faceboock" src="./imagenes/facebook-icon.png.png" alt=" Icono faceboock"></a>
-                <a href="https://mail.google.com/mail?hl=es"><img class="icono.mail" src="./imagenes/mail-icon.png.png" alt="Icono email"></a>
+                <a href="https://www.facebook.com/"><img class="icono.faceboock" src="./imagenes/facebook-icon.png.png"
+                        alt=" Icono faceboock"></a>
+                <a href="https://mail.google.com/mail?hl=es"><img class="icono.mail" src="./imagenes/mail-icon.png.png"
+                        alt="Icono email"></a>
             </div>
         </nav>
 
