--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title>Carrito de Compras</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Ambar Nils: Carrito de compras">
+    <meta name="keywords" content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
