--- a/index4.html
+++ b/index4.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=main, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <meta name="description" content="Ambar Nils: Ofertas de Press-on ">
+    <meta name="keywords" content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
     <!-- bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
