--- a/producto1.html
+++ b/producto1.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ambar Nils: Press-on Set-floral">
+    <meta name="keywords" content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
     <link rel="stylesheet" href="./css/style.css">
     <!-- bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
