--- a/index3.html
+++ b/index3.html
@@ -2,20 +2,28 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Ambar Nils: Press-on personalizadas">
-    <meta name="keywords" content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
-    <link rel="stylesheet" href="./css/style.css" />
-    <!-- bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- AOS Animations -->
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-    <!-- icono de pagina -->
-    <link rel="icon" href="./imagenes/A.N.png" type="image/png" />
-    <title>AmbarNails</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Ambar Nails: Press-on personalizadas y arte en uñas en Buenos Aires." />
+  <meta name="keywords" content="uñas, press on, press-on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, hechas a mano, manicura Argentina" />
+  <meta name="author" content="Ambar Nails" />
+
+  <title>AmbarNails | Press-on personalizadas</title>
+
+  <!-- Favicon -->
+  <link rel="icon" href="./imagenes/A.N.png" type="image/png" />
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- AOS Animations -->
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="./css/style.css" />
+
+ 
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 </head>
 
 <body>
@@ -125,7 +133,7 @@
                         <div class="card h-100 shadow producto-card">
                             <img src="./imagenes/set-primaverapastel.jpg" class="card-img-top" alt="Rosa Vintage" />
                             <div class="card-body">
-                                <h5 class="card-title">Primavera Patel</h5>
+                                <h5 class="card-title">Primavera Pastel</h5>
                                 <p class="card-text">Colores suaves y diseños pastel, con efecto aurora.</p>
                             </div>
                         </div>
@@ -138,7 +146,7 @@
                         <div class="card h-100 shadow producto-card">
                             <img src="./imagenes/set-fammefatal.jpg" class="card-img-top" alt="Noches de Brillo" />
                             <div class="card-body">
-                                <h5 class="card-title">Famme Fatal</h5>
+                                <h5 class="card-title">Femme Fatale</h5>
                                 <p class="card-text">Efecto aurora intenso con tornasol violeta, con un pluss de
                                     texturas 3D silver.</p>
                             </div>
