--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ambar Nails: press on personalizadas y servicios de uñas en Buenos Aires. Diseños únicos hechos a mano para destacar tu estilo.">
-    <meta name="keywords" content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
-    <!--Lei en fuentes que no se conciera algo necesario el keywords ya que la mayoría de los buscadores dejaron de usarla como factor de posicionamiento hace años, porque era fácil de abusar.-->
-    <link rel="stylesheet" href="./css/style.css">
-    <!-- bootstrap-->
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Bundle JS (incluye Popper y JS necesarios) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <meta name="description" content="Ambar Nails: press-on personalizadas y servicios de uñas en Buenos Aires. Diseños únicos hechos a mano para destacar tu estilo.">
+    <meta name="author" content="Ambar Nails">
+    <!-- Aunque la etiqueta keywords ya no se usa activamente para SEO, no molesta tenerla si es moderada -->
+    <meta name="keywords" content="uñas, press on, press-on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, hechas a mano, manicura Argentina">
 
+    <title>Ambar Nails | Press-on personalizadas y Manicura</title>
 
-
-
-    <!-- icono de pagina -->
+    <!-- Favicon -->
     <link rel="icon" href="imagenes/A.N.png" type="image/png">
-    <title>Ambar Nails | Press-on personalizadas y Manicura </title>
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Tu hoja de estilos personalizada -->
+    <link rel="stylesheet" href="./css/style.css">
+
+   
 </head>
+
 
 <body>
     <header>
@@ -227,15 +229,19 @@
 
 
         <form class="form__contacto">
-            <h2>Contactenos
-            </h2>
+
+            <h2>Contactenos</h2>
+
             <div class="form__input">
+                <label for="nombre">Nombre completo</label>
                 <input type="text" placeholder="Nombre Completo">
             </div>
             <div class="form__input">
+                <label for="email">Correo electrónico</label>
                 <input type="email" placeholder="Email">
             </div>
             <div class="form__input">
+                <label for="mensaje">Mensaje</label>
                 <textarea placeholder="Deja tu mensaje"></textarea>
             </div>
         </form>
@@ -292,6 +298,7 @@
             </div>
         </div>
     </footer>
+    
 </body>
 
 </html>
