--- a/index2.html
+++ b/index2.html
@@ -2,15 +2,25 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Carrito de Compras</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ambar Nils: Carrito de compras">
-    <meta name="keywords" content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Ambar Nails: Carrito de compras">
+  <meta name="keywords" content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
+  <meta name="author" content="Ambar Nails">
+
+  <title>Carrito de Compras | Ambar Nails</title>
+
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="./css/style.css">
+
+   <!-- Favicon -->
+  <link rel="icon" href="./imagenes/A.N.png" type="image/png" />
+
 </head>
+
 
 <body style="background-color: palevioletred;">
     <div class="container py-5">
