--- a/index4.html
+++ b/index4.html
@@ -3,18 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=main, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ambar Nails: Ofertas de Press-on">
+    <meta name="keywords" content="uñas, press on, press-on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, hechas a mano, manicura Argentina">
+    <meta name="author" content="Ambar Nails">
+
+    <!-- Favicon -->
+    <link rel="icon" href="./imagenes/A.N.png" type="image/png">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Tu hoja de estilos -->
     <link rel="stylesheet" href="./css/style.css">
-    <meta name="description" content="Ambar Nils: Ofertas de Press-on ">
-    <meta name="keywords" content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
-    <!-- bootstrap-->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- icono de pagina -->
-    <link rel="icon" href="./imagenes/A.N.png" type="image/png">
-    <title>AmbarNails</title>
+    <title>Ambar Nails | Ofertas Press-on</title>
 </head>
+
 
 <body>
     <header>
