--- a/producto1.html
+++ b/producto1.html
@@ -2,20 +2,27 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ambar Nils: Press-on Set-floral">
-    <meta name="keywords" content="uñas, press on, press on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, uñas a mano, manicura Argentina">
-    <link rel="stylesheet" href="./css/style.css">
-    <!-- bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Ambar Nails: Press-on set floral hecho a mano, ideal para destacar tu estilo." />
+  <meta name="keywords" content="uñas, press-on, press-on personalizadas, uñas postizas, Ambar Nails, Buenos Aires, nail art, uñas decoradas, hechas a mano, manicura Argentina" />
+  <meta name="author" content="Ambar Nails" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- icono de pagina -->
-    <link rel="icon" href="./imagenes/A.N.png" type="image/png">
-    <title>AmbarNails</title>
+  <title>AmbarNails | Set Floral</title>
 
+  <!-- Favicon -->
+  <link rel="icon" href="./imagenes/A.N.png" type="image/png" />
+
+  <!-- Bootstrap CSS (versión coherente con JS) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="./css/style.css" />
+
+  <!-- Bootstrap Bundle (JS con Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
+
 
 <body class="body__producto1">
     <header>
