--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     <!-- Tu hoja de estilos personalizada -->
     <link rel="stylesheet" href="./css/style.css">
+     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
    
 </head>
