Mensaje descriptivo de los cambios

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
                 <label for="mensaje">Mensaje</label>
                 <textarea placeholder="Deja tu mensaje"></textarea>
             </div>
+            <button type="submit">Enviar</button>
         </form>
     </main>
     <footer class="footer">
