--- a/index3.html
+++ b/index3.html
@@ -72,7 +72,7 @@
             <div class="row justify-content-center g-4">
 
                 <!-- Producto 3 -->
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-aos="fade-right">
+                <div class="col-12 col-sm-12 col-md-4 col-lg-3" data-aos="fade-right">
                     <a href="producto1.html" class="card-link">
                         <div class="card h-100 shadow producto-card">
                             <img src="./imagenes/set-floral.png.jpg" class="card-img-top" alt="Rosa Vintage" />
@@ -303,6 +303,10 @@
             once: true      // si es true, solo se anima una vez (al aparecer)
         });
     </script>
+    <!-- Popper.js y Bootstrap JS (necesarios para la funcionalidad del navbar) -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
